♻️ #103 Refactor: .collect(Collectors.toList()) -> .toList()